templates/preview/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  selector:
    app: sample-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
